# picow_c_ntp_rtc_lcd_clock

./: .gitignore  CMakeLists.txt  README.md  bsttimes.h  hd44780_lcd_api.c  hd44780_lcd_api.h  hd44780_lcd_defs.h  ntp_rtc_lcd_clock.c
apps/: generate_bst_times.c
